Updated demo files and fixed issues